...
            Tab(
                selected = drawerPagerState.currentPage == 1,
                onClick = {
                    drawerScope.launch { drawerPagerState.animateScrollToPage(1) }
                },
                text = { Text(stringResource(R.string.tab_bookmarks)) },
                modifier = Modifier.testTag("BookmarksTab")
            )
            Tab(
                selected = drawerPagerState.currentPage == 2,
                onClick = {
                    drawerScope.launch { drawerPagerState.animateScrollToPage(2) }
                },
...
